# firecrawl-eval-repair

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: benchmark_200_plan.md  benchmark_200_results.md  live_eval_summary.md  project_plan.md  publish_checklist.md  sample_findings.md
examples/: benchmark_200_urls.txt  edge_urls.txt  firecrawl_options.json  hard_urls.txt  real_urls.txt  urls.txt
fc_harness/: __init__.py  baseline.py  cli.py  dryrun.py  env.py  firecrawl.py  models.py  recommend.py  report.py  retry.py  scoring.py
outreach/: cold_email.md  demo_script.md  final_email.md
tests/: test_cli.py  test_recommend.py  test_retry.py  test_scoring.py
